fixed project card color and alignment

--- a/src/main/Projects/AllProjects/index.css
+++ b/src/main/Projects/AllProjects/index.css
@@ -9,10 +9,11 @@
   flex-wrap: wrap;
   padding-right: 15px;
   max-height: 65vh !important;
-  width: 90%;
-  margin-left: 5%;
+  width: 98%;
+  /* margin-left: 5%; */
   margin-top: 2%;
   padding: 20px;
+  padding-left: 0;
   /* overflow: scroll; */
   /* box-shadow: -5px -5px 9px rgb(255 255 255 / 45%), 5px 5px 9px; */
   /* box-shadow: inset 0 3px 6px rgb(0 0 0 / 16%), 0 4px 6px rgb(0 0 0 / 45%); */
