--- a/src/main/Projects/ProjectCard/projectCard.css
+++ b/src/main/Projects/ProjectCard/projectCard.css
@@ -82,9 +82,11 @@
   width: 252px;
   margin: 10px;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 6px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-  color: white;
+  /* color: white; */
+  border-top: 5px solid;
+  background: #fff;
 }
 
 .menu-icon {
@@ -115,11 +117,19 @@
 .project-details {
   text-align: center;
 }
+.project-details h4 {
+  font-size: 17px;
+}
+.project-details p {  
+  font-size: 13px;
+ color: #9d9d9d;
+}
 
 .project-stats {
   display: flex;
   justify-content: space-between;
   margin: 20px 0;
+  color: #6f748d;
 }
 
 .stat {
